reorganize menu and split up business solutions

--- a/sample-work/chess-openings.html
+++ b/sample-work/chess-openings.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Chess Demo
+title: Chess Openings
 quote: "The computer age has arrived, and it influences everything: analysis, preparation, information. Now a different talent is required - the ability to synthesize ideas."
 cite: "Boris Spassky, Tenth World Chess Champion"
-permalink: /chess-demo/
+permalink: /sample-work/chess-openings/
 ---
 
 <!-- Modal -->
@@ -47,8 +47,8 @@ permalink: /chess-demo/
 </div> <!-- /.row -->
 
 <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-<script src="/js/chess-demo.js"></script>
-<link rel="stylesheet" href="/css/chess-demo.css">
+<script src="/js/chess-openings.js"></script>
+<link rel="stylesheet" href="/css/chess-openings.css">
 <script type="text/javascript">
 $( document ).ready(function() {
   gameModel.initialize(["rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq -"], []);
