add jumbotron and move quote

--- a/sample-work/chess-openings.html
+++ b/sample-work/chess-openings.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 title: Chess Openings
-quote: "The computer age has arrived, and it influences everything: analysis, preparation, information. Now a different talent is required - the ability to synthesize ideas."
-cite: "Boris Spassky, Tenth World Chess Champion"
+hero: "To improve my own game, I wrote this tool to explore chess openings."
 permalink: /sample-work/chess-openings/
 ---
 
